@@ -42,6 +42,10 @@ int plot_is_mouseable (const png_plot *plot);
 
 GtkWidget *plot_get_shell (png_plot *plot);
 
+double plot_get_xmin (png_plot *plot);
+
+double plot_get_ymin (png_plot *plot);
+
 GPT_SPEC *plot_get_spec (png_plot *plot);
 
 void revise_distribution_plotspec (png_plot *plot, int d, int df1, int df2);
