@@ -80,6 +80,9 @@ void gretl_matrix_print_with_col_heads (const gretl_matrix *m,
 					const char **heads,
 					PRN *prn);
 
-void gretl_matrix_print_plain (const gretl_matrix *m, PRN *prn);
+void gretl_matrix_print_with_format (const gretl_matrix *m, 
+				     const char *fmt,
+				     int wid, int prec,
+				     PRN *prn);
 
 #endif /* MATRIX_EXTRA_H */
